@@ -1,6 +1,7 @@
 0.8.0 (unreleased)
 ==================
 * History browsing (LP: #220778).
+* New setting to hide the tasks pane on startup (LP: #767096).
 
 
 0.7.1 (2012-02-01)
